Mon Jun  9 09:31:04 BST 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* man/po4a/po/ru.po: Update.

Tue Jun  3 09:54:17 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/ru.po: Update with msgmerge.

Tue Jun  3 09:53:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/ru/translator.add: Add dummy file.

Tue Jun  3 00:07:47 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/ru.po: New from Translation Project (thanks, Yuri
	  Kozlov).
	* configure.ac (AC_CONFIG_FILES): Add man/ru/Makefile.
	* man/Makefile.am (MAYBE_PO4A_LINGUAS): Add ru.
	* man/ru/Makefile.am: New file.
	* man/po4a/Makefile.am (POFILES): Add po/ru.po.
	* man/po4a/po4a.cfg (po4a_langs): Add ru.
	* man/THANKS: Credit Yuri Kozlov with man/ru as well as ru.po.
	* .bzrignore: Add man/ru/man1, man/ru/man5, and man/ru/man8.

Sun Jun  1 16:40:12 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man8/mandb.man8 (SYNOPSIS): Document -t (thanks, Yuri Kozlov;
	  Debian bug #483951).

Sun Jun  1 04:01:12 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/whatis.man1 (SYNOPSIS): Document -v (thanks, Yuri Kozlov;
	  Debian bug #483862).

Fri May 30 00:11:15 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/manconv.man1 (SYNOPSIS), man/man1/manpath.man1
	  (SYNOPSIS): Document -h and -V here as well as in OPTIONS (thanks,
	  Yuri Kozlov; Debian bug #483589).

Sun May 25 18:51:47 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (SYNOPSIS): Fix minor formatting error in -w|-W
	  synopsis.

Sun May 25 18:46:55 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (SYNOPSIS): Restructure to include all options
	  from the OPTIONS section and to use approximately the same order.
	  Thanks to Yuri Kozlov; Debian bugs #482424, #482791, #482792, and
	  #482810.

Sun May 25 18:29:28 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/lexgrog.man1 (SYNOPSIS): Correct -s to -E.
	  (OPTIONS): Correct -e to -E.