@@ -1,3 +1,7 @@
+Mon Jun  9 13:47:50 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib: Upgrade to 20080601.
+
 Mon Jun  9 09:31:04 BST 2008  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* man/po4a/po/ru.po: Update.
